--- a/system/cfengine/README
+++ b/system/cfengine/README
@@ -1,4 +1,16 @@
-cfengine (Automate and manage your IT infrastructure)
+|--------------------------------------------------------------------|
+cfengine (Automate and manage your IT infrastructure - with PAM)
 
 CFEngine is a configuration management and automation framework that
 lets you securely manage your mission critical IT infrastructure.
+
+Additional build options (each defaults to no):
+
+   MYSQL_CLIENT=yes   Enable the MySQL connector
+   LIBVIRT=yes        Enable virtual machine management support
+                      (requires libvirt)
+
+For example, to enable virtual machine management support pass
+LIBVIRT=yes to the slackbuild as:
+
+   LIBVIRT=yes ./cfengine.SlackBuild
